--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -22,6 +22,19 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     margin-bottom: 50px;
+    transition: color 0.4s;
+    -webkit-transition: color 0.4s;
+    -moz-transition: color 0.4s;
+    -ms-transition: color 0.4s;
+    -o-transition: color 0.4s;
+}
+
+.btnBack:hover {
+    background-color: rgb(243, 165, 21);
+}
+
+.iconBack {
+    margin-right: 10px;
 }
 
 .infoTitle {
