--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -10,3 +10,25 @@
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
 }
+
+.scrolltotop {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: darkorange;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+
+.scrolltotop svg {
+    fill: lightgreen;
+}
+
+.scrolltotop:hover {
+    background-color: darkorange;
+}
