--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -99,3 +99,42 @@
 .review:hover {
     color: orange;
 }
+
+
+.videoBackdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.videoModal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 500px;
+    width: 1100px;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.57);
+    border-radius: 3px;
+    box-shadow: 0 0 5px 5px rgba(201, 162, 45, 0.7),
+        inset 0 0 30px 10px rgba(201, 162, 45, 0.7);
+}
+
+iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.iconBackModal {
+    position: absolute;
+    display: flex;
+    fill: orange;
+    width: 150px;
+    height: 70px;
+    top: 20%;
+    left: 5%;
+    cursor: pointer;
+}
