--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -113,6 +113,7 @@
 
 
 .columnImg:hover::before {
+    pointer-events: none;
     content: '';
     position: absolute;
     top: 0;
@@ -130,6 +131,7 @@
 }
 
 .columnImg:hover::after {
+    pointer-events: none;
     content: '';
     position: absolute;
     top: 50%;
@@ -139,7 +141,7 @@
     height: 150px;
     background: url('../../images/iconfinder-play.svg') no-repeat center center;
     background-size: contain;
-    z-index: 2;
+    /* z-index: 2; */
     transition: all 0.4s;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
