--- a/src/components/GanreList/GanreList.module.css
+++ b/src/components/GanreList/GanreList.module.css
@@ -5,6 +5,7 @@
     align-items: center;
     gap: 10px;
     margin-bottom: 30px;
+    margin-top: 70px;
 }
 
 .ganreListItem {
@@ -12,13 +13,12 @@
     justify-content: center;
     align-items: center;
     width: 150px;
-    background: #603813;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #b29f94, #603813);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #b29f94, #603813);
+    background: #232526;
+    background: -webkit-linear-gradient(to right, #414345, #232526);
+    background: linear-gradient(to right, #414345, #232526);
     padding: 10px;
     border-radius: 5px;
+    border: 1px solid gold;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
