--- a/src/components/MoviesItem/MoviesItem.module.css
+++ b/src/components/MoviesItem/MoviesItem.module.css
@@ -1,12 +1,58 @@
+.cardWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 300px;
+    overflow: hidden;
+}
+
+.imgWrapper {
+    overflow: hidden;
+    margin-bottom: 5px;
+}
+
+.moviesImg {
+    transition: transform 0.4s;
+    -webkit-transition: transform 0.4s;
+    -moz-transition: transform 0.4s;
+    -ms-transition: transform 0.4s;
+    -o-transition: transform 0.4s;
+}
+
+.moviesImg:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
 .cardTitle {
     max-width: 200px;
     color: rgb(36, 35, 35);
+    font-size: 14px;
+}
+
+.ratingStarsContainer {
+    margin-top: auto;
 }
 
 .goldStar {
+    font-size: 10px;
     color: gold
 }
 
 .grayStar {
+    font-size: 10px;
     color: gray;
+}
+
+.ratingText {
+    color: rgb(36, 35, 35);
+    font-size: 10px;
+}
+
+.ratingNumber {
+    color: rgb(36, 35, 35);
+    font-size: 10px;
 }
