--- a/src/components/MoviesList/MoviesList.module.css
+++ b/src/components/MoviesList/MoviesList.module.css
@@ -4,16 +4,17 @@
     flex-wrap: wrap;
     gap: 10px;
     margin-bottom: 50px;
+    max-width: 800px;
+    overflow: hidden;
 }
 
 .moviesItem {
+    border: 1px solid gold;
+    max-width: 150px;
     padding: 10px;
-    background: #333333;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #dd1818, #333333);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #dd1818, #333333);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #232526;
+    background: -webkit-linear-gradient(to right, #414345, #232526);
+    background: linear-gradient(to right, #414345, #232526);
 }
 
 .MoviesList_moviesItem {
