--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,3 +1,14 @@
 .trandingMovies {
-    padding-top: 50px;
+    padding-top: 80px;
+    overflow: hidden;
+}
+
+.mainWrapper {
+    display: flex;
+}
+
+.mainFormColumn {
+    max-width: 400px;
+    width: 100%;
+
 }
