--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -121,7 +121,7 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.7) 100%);
-    z-index: 1;
+    /* z-index: 1; */
     transition: all 0.4s;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
@@ -195,6 +195,7 @@
 
 .videoBackdrop {
     position: fixed;
+    z-index: 30;
     top: 0;
     left: 0;
     width: 100vw;
@@ -216,6 +217,8 @@
 }
 
 iframe {
+    /* position: relative; */
+    /* z-index: 3; */
     width: 100%;
     height: 100%;
 }
