--- a/src/components/MainForm/MainForm.module.css
+++ b/src/components/MainForm/MainForm.module.css
@@ -1,20 +1,23 @@
 .formRegistration {
-    max-width: 100%;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
     background: #232526;
     background: -webkit-linear-gradient(to right, #414345, #232526);
     background: linear-gradient(to right, #414345, #232526);
     border: 1px solid gold;
-    gap: 10px;
+    gap: 20px;
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+    margin-top: 80px;
 }
 
 .formRegistrationTitle {
