--- a/src/components/MoviesList/MoviesList.module.css
+++ b/src/components/MoviesList/MoviesList.module.css
@@ -4,19 +4,18 @@
     flex-wrap: wrap;
     gap: 10px;
     margin-bottom: 50px;
-    max-width: 800px;
     overflow: hidden;
 }
 
 .moviesItem {
     border: 1px solid gold;
-    max-width: 150px;
+    max-width: 320px;
     padding: 10px;
     background: #232526;
     background: -webkit-linear-gradient(to right, #414345, #232526);
     background: linear-gradient(to right, #414345, #232526);
 }
 
-.MoviesList_moviesItem {
+/* .MoviesList_moviesItem {
     width: 200px;
-}
+} */
