--- a/src/components/SearchByYear/SearchByYear.module.css
+++ b/src/components/SearchByYear/SearchByYear.module.css
@@ -1,29 +1,69 @@
+/* Movie theater select style */
 .selectedYear {
-    margin-bottom: 10px;
+    position: relative;
+    display: inline-block;
+    width: 100%;
 }
 
 .selectLabel {
-    color: rgb(162, 158, 158);
-    font-size: 16px;
-    text-decoration: underline;
-    margin-right: 10px;
-}
-
-.selectYear {
-    padding: 5px;
-    color: rgb(162, 158, 158);
-    background-color: transparent;
-    outline: none;
-    border: 1px solid gold;
-    border-radius: 5px;
-    width: 130px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #101010;
 }
 
 .searchText {
-    color: rgb(162, 158, 158);
+    margin-top: 5px;
+    color: #101010;
+}
+
+.selectYear {
+    width: 100%;
+    height: 40px;
+    padding: 10px;
     font-size: 16px;
+    border-radius: 10px;
+    border: none;
+    background-color: #2c2c2c;
+    color: #fff;
+    cursor: pointer;
+    appearance: none;
+}
+
+.selectYear::-ms-expand {
+    display: none;
+}
+
+select:focus {
+    outline: none;
+}
+
+.selectYear option {
+    background-color: #2c2c2c;
+    color: #fff;
+}
+
+/* Movie theater select arrow */
+.selectYear:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 8px solid #fff;
+    transform: translateY(-50%);
+}
+
+.selectIcon {
+    position: absolute;
+    top: 50%;
+    right: 4%;
+    z-index: 10;
+}
+
+.css-b62m3t-container {
+    background-color: red;
 }
