--- a/src/pages/ActorsPage/ActorsPage.module.css
+++ b/src/pages/ActorsPage/ActorsPage.module.css
@@ -1,3 +1,35 @@
+.search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+    margin-bottom: 20px;
+}
+
+.inputActors {
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: 1px solid gold;
+    width: 200px;
+    height: 50px;
+    background: #232526;
+    background: -webkit-linear-gradient(to right, #414345, #232526);
+    background: linear-gradient(to right, #414345, #232526);
+    color: rgb(144, 140, 140);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.inputActors:focus {
+    outline: none;
+}
+
+.inputActors::placeholder {
+    padding-left: 5px;
+}
+
 .actorList {
     margin-top: 90px;
     margin-bottom: 50px;
@@ -61,4 +93,28 @@
 .disabled {
     opacity: 0.5;
     pointer-events: none;
+}
+
+.btnBack {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    border: 1px solid gold;
+    width: 200px;
+    height: 50px;
+    background: #232526;
+    background: -webkit-linear-gradient(to right, #414345, #232526);
+    background: linear-gradient(to right, #414345, #232526);
+    color: rgb(144, 140, 140);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    margin-bottom: 50px;
+    transition: color 0.4s;
+    -webkit-transition: color 0.4s;
+    -moz-transition: color 0.4s;
+    -ms-transition: color 0.4s;
+    -o-transition: color 0.4s;
 }
