--- a/src/pages/MovieDetalisPage/MovieDetalis.module.css
+++ b/src/pages/MovieDetalisPage/MovieDetalis.module.css
@@ -3,12 +3,12 @@
 }
 
 
-.posrerMovie {
+.posterMovie {
     position: absolute;
-    width: 50%;
+    width: 90%;
     height: auto;
-    top: 80px;
-    left: 30%;
+    top: 0;
+    left: 50%;
     z-index: -1;
     transform: translate(-50%, 0);
     opacity: 0.2;
@@ -26,33 +26,17 @@
 
 .detalisWrapper {
     display: flex;
-    justify-content: space-between;
-    padding-top: 110px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .columnInfo {
     padding: 30px;
 }
 
-.btnBack {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
-    width: 200px;
-    height: 50px;
-    background-color: orange;
-    color: rgb(46, 44, 44);
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    margin-bottom: 50px;
-    transition: color 0.4s;
-    -webkit-transition: color 0.4s;
-    -moz-transition: color 0.4s;
-    -ms-transition: color 0.4s;
-    -o-transition: color 0.4s;
+.btnBackDetalisWrapper {
+    margin-top: 80px;
 }
 
 .btnBack:hover {
@@ -122,7 +106,6 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.7) 100%);
-    /* z-index: 1; */
     transition: all 0.4s;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
@@ -142,7 +125,6 @@
     height: 150px;
     background: url('../../images/iconfinder-play.svg') no-repeat center center;
     background-size: contain;
-    /* z-index: 2; */
     transition: all 0.4s;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
@@ -173,8 +155,10 @@
 
 .reviewList {
     display: flex;
+    justify-content: center;
     column-gap: 10px;
     margin-bottom: 40px;
+    margin-top: 20px;
 }
 
 .cast,
