--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,3 +10,34 @@
     right: 0;
     z-index: 5;
 }
+
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 1.5rem;
+    margin-top: 10px;
+    position: relative;
+}
+
+.logo span {
+    color: aqua;
+}
+
+.reactLogo {
+    color: aqua;
+    margin-right: 5px;
+    animation: rotate 5s infinite linear;
+    -webkit-animation: rotate 5s infinite linear;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
