--- a/src/components/MoviesItem/MoviesItem.module.css
+++ b/src/components/MoviesItem/MoviesItem.module.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 300px;
-    overflow: hidden;
+    height: 100%
 }
 
 .imgWrapper {
@@ -12,6 +11,8 @@
 }
 
 .moviesImg {
+    max-width: 100%;
+    object-fit: cover;
     transition: transform 0.4s;
     -webkit-transition: transform 0.4s;
     -moz-transition: transform 0.4s;
@@ -28,13 +29,16 @@
 }
 
 .cardTitle {
-    max-width: 320px;
+    max-width: 300px;
     color: rgb(36, 35, 35);
     font-size: 14px;
+    margin-bottom: 0;
+    margin-top: auto;
 }
 
 .ratingStarsContainer {
-    margin-top: auto;
+    display: flex;
+    align-items: center;
 }
 
 .goldStar {
@@ -53,6 +57,47 @@
 }
 
 .ratingNumber {
+    font-size: 8px;
+}
+
+.ratingBlock {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+    width: 10px;
+    height: 10px;
+    padding: 5px;
+    border-radius: 50%;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #fff;
+}
+
+/* Задаем разные цвета для рейтингов */
+.red {
+    background: #f85032;
+    background: -webkit-linear-gradient(to right, #e73827, #f85032);
+    background: linear-gradient(to right, #e73827, #f85032);
+}
+
+.yellow {
+    background: #F7971E;
+    background: -webkit-linear-gradient(to right, #FFD200, #F7971E);
+    background: linear-gradient(to right, #FFD200, #F7971E);
     color: rgb(36, 35, 35);
-    font-size: 10px;
+}
+
+.green {
+    background: #000000;
+    background: -webkit-linear-gradient(to right, #0f9b0f, #000000);
+    background: linear-gradient(to right, #0f9b0f, #000000);
+}
+
+
+.moviesYear {
+    color: red;
+    font-weight: bold;
+    font-size: 12px;
+    margin-left: auto;
 }
