--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -13,15 +13,15 @@
 }
 
 .active {
-    color: crimson;
+    color: gold;
     cursor: default;
 }
 
 .navigationLink {
-    color: rgb(29, 22, 22);
+    color: aqua;
     text-transform: uppercase;
 }
 
 .navigationLink:hover {
-    color: crimson;
+    color: gold;
 }
