--- a/src/components/GanreList/GanreList.module.css
+++ b/src/components/GanreList/GanreList.module.css
@@ -4,8 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-bottom: 30px;
-    margin-top: 150px;
+    margin-top: 20px;
 }
 
 .ganreListItem {
@@ -23,6 +22,8 @@
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-    color: rgb(21, 20, 20);
+    color: aqua;
+    font-weight: bold;
+    font-size: 12px;
     text-transform: uppercase;
 }
